tests/fixtures/invalid/min_none_list.py
# Cannot call min() with None, List[int]
x = min(None, [1, 2, 3])
